<?xml version="1.0"?>
<package format="2">
  <name>valid</name>
  <version>0.0.1</version>
  <description>dummy package to validate moveit_ci checking capabilities</description>

  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>code_coverage</test_depend>

  <export>
  </export>
</package>
